[package]
name = "c314-utils"
version = "0.1.4"
edition = "2021"
authors = ["314ShadePi <erikkirkegaardstage@gmail.com>"]
description = "Small Rust utilities"
documentation = "https://docs.rs/c314-utils"
license = "MIT"
keywords = ["utilities", "utils-library", "util"]
repository = "https://github.com/314ShadePi/c314-utils.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
